# rooibos

./: .gitignore  .tokeignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  Makefile.toml  README.md  insta.yaml  rustfmt.toml  typos.toml
crates/rooibos/: Cargo.toml
crates/rooibos-component-macros/: Cargo.toml
crates/rooibos-component-macros/src/: lib.rs
crates/rooibos-components/: Cargo.toml
crates/rooibos-components/src/: button.rs  container.rs  for_loop.rs  image.rs  input.rs  lib.rs  list_view.rs  notification.rs  popup.rs  router.rs  show.rs  spinner.rs  tab_view.rs  tabs.rs  terminal.rs  wrapping_list.rs
crates/rooibos-config/: Cargo.toml
crates/rooibos-config/src/: lib.rs
crates/rooibos-dom/: Cargo.toml
crates/rooibos-dom/examples/: counter.rs  counter_without_macros.rs  counters.rs  elm.rs  example.rs  overlay.rs  router.rs  test.rs
crates/rooibos-dom/src/: borders.rs  chart.rs  dom.rs  error_boundary.rs  lib.rs  macros.rs  nonblocking_terminal.rs  nonblocking_terminal_wasm.rs  sparkline.rs  suspense.rs  widgets.rs  wrap.rs
crates/rooibos-dom/src/components/: for_each.rs  mod.rs  popup.rs  router.rs  show.rs  tabs.rs
crates/rooibos-dom/src/dom/: any_view.rs  children.rs  component.rs  div.rs  document_fragment.rs  dom_node.rs  dom_state.rs  dom_widget.rs  dyn_child.rs  element.rs  flex_node.rs  focus.rs  for_each.rs  into_view.rs  layout.rs  layout_tree.rs  mod.rs  node_properties.rs  node_tree.rs  renderer.rs  unit.rs  view.rs
crates/rooibos-dom/src/events/: crossterm.rs  dispatcher.rs  event_handler.rs  key.rs  mod.rs  (+2 more)
crates/rooibos-dom/tests/: ui.rs
crates/rooibos-egui/: Cargo.toml
crates/rooibos-egui/src/: backend.rs  lib.rs
crates/rooibos-gui/: Cargo.toml
crates/rooibos-gui/src/: backend.rs  lib.rs  main.rs
crates/rooibos-keybind/: Cargo.toml
crates/rooibos-keybind-macros/: Cargo.toml
crates/rooibos-keybind-macros/src/: lib.rs
crates/rooibos-keybind/src/: command_bar.rs  command_handler.rs  key_handler.rs  keys.rs  lib.rs
crates/rooibos-macros/: Cargo.toml
crates/rooibos-macros/src/: caller_id.rs  component.rs  component_children.rs  lib.rs  view.rs
crates/rooibos-old/: Cargo.toml
crates/rooibos-old/src/: lib.rs
crates/rooibos-reactive/: Cargo.toml
crates/rooibos-reactive/src/: callback.rs  context.rs  effect.rs  effects.rs  error_boundary.rs  for_loop.rs  hydration.rs  iter.rs  lib.rs  macros.rs  memo.rs  memos.rs  node.rs  oco.rs  provider.rs  resource.rs  runtime.rs  scope.rs  selector.rs  serde.rs  serialization.rs  signal.rs  signal_wrappers_read.rs  signal_wrappers_write.rs  signals.rs  slice.rs  spawn.rs  spawn_microtask.rs  store.rs  stored_value.rs  stored_values.rs  suspense.rs  trigger.rs  utils.rs  watch.rs  widgets.rs
crates/rooibos-router/: Cargo.toml
crates/rooibos-router/src/: lib.rs
crates/rooibos-rsx/: Cargo.toml
crates/rooibos-rsx-old/: Cargo.toml
crates/rooibos-rsx-old/src/: cache.rs  chart.rs  dom.rs  lib.rs  sparkline.rs  widgets.rs
crates/rooibos-rsx-old/tests/: ui.rs
crates/rooibos-rsx/src/: cache.rs  chart.rs  components.rs  dom.rs  lib.rs  sparkline.rs  view.rs  widgets.rs
crates/rooibos-rsx/tests/: ui.rs
crates/rooibos-runtime/: Cargo.toml
crates/rooibos-runtime/src/: commands.rs  debounce.rs  error.rs  input_handler.rs  lib.rs  runtime.rs  settings.rs  signal_handler.rs  state.rs  wasm_compat.rs
crates/rooibos-ssh/: Cargo.toml
crates/rooibos-ssh/src/: backend.rs  lib.rs
crates/rooibos-terminal/: Cargo.toml
crates/rooibos-terminal/src/: crossterm.rs  lib.rs  stream.rs  termina.rs  termion.rs  termwiz.rs  test.rs
crates/rooibos-tester/: Cargo.toml
crates/rooibos-tester/src/: lib.rs  test_backend.rs
crates/rooibos-theme/: Cargo.toml
crates/rooibos-theme-macros/: Cargo.toml
crates/rooibos-theme-macros/src/: lib.rs
crates/rooibos-theme/src/: lib.rs  local_override.rs  theme.rs
crates/rooibos-theme/tests/: profile_test.rs  style_test.rs  theme_test.rs
crates/rooibos-util/: Cargo.toml
crates/rooibos-util/src/: generate_theme.rs  lib.rs  main.rs  open_theme.rs  print_theme.rs
crates/rooibos-util/themes/: catppuccin.css  everforest.css  gruvbox.css  kanagawa.css  monokai.css  nord.css  one-dark.css  rose-pine.css  solarized.css  tailwind.css  tokyo-night.css
crates/rooibos-web/: Cargo.toml
crates/rooibos-web/src/: backend.rs  lib.rs
crates/rooibos-xterm-js/: Cargo.toml
crates/rooibos-xterm-js/src/: backend.rs
crates/rooibos/src/: lib.rs
crates/rooibos/tests/: test.rs
examples/: Cargo.toml  example.rs
examples-old/: Cargo.toml
examples/egui-desktop/: Cargo.toml
examples/egui-desktop/src/: main.rs
examples/examples/: buttons.rs  clipboard.rs  config.rs  confirm_exit.rs  counter.rs  counter_no_runtime.rs  counters.rs  counters_static.rs  dynamic_tabs.rs  effects.rs  error_handler.rs  exec.rs  fetch.rs  flex.rs  focus.rs  graceful_shutdown.rs  http_client.rs  image.rs  inline.rs  input.rs  keybind.rs  list.rs  log_to_file.rs  manual_control.rs  manual_entrypoint.rs  manual_event_loop.rs  merge_borders.rs  multi_tabs.rs  no_runtime.rs  non_interactive.rs  notifications.rs  pipe.rs  pipe_input.rs  popup.rs  prevent_exit.rs  redirect_output.rs  router.rs  router_clap.rs  router_clap_params.rs  router_clap_simple.rs  (+17 more)
examples/examples/buttons/: main.rs  tests.rs
examples/examples/counter/: counter.tape  main.rs  tests.rs
examples/examples/counters/: main.rs  tests.rs
examples/examples/counters_static/: main.rs  tests.rs
examples/examples/demo/: main.rs  random.rs  tab1.rs  tab2.rs
examples/examples/dynamic_iteration/: main.rs  tests.rs
examples/examples/dynamic_tabs/: main.rs  tests.rs
examples/examples/exec/: main.rs  tests.rs
examples/examples/static_iteration/: main.rs  tests.rs
examples/examples/todos/: client.rs  main.rs  server.rs  tests.rs
examples/examples/todos_api/: client.rs  main.rs  server.rs  tests.rs  todos_api.tape
examples/wasm/: Cargo.toml  index.html  package-lock.json
examples/wasm/src/: lib.rs  main.rs
examples/wasm/www/: package-lock.json  package.json
integration-tests/: Cargo.toml
(+163 files in other folders)
