[workspace]
members = ["./crates/*", "examples", "examples/wasm", "integration-tests"]
resolver = "3"

[workspace.dependencies]
# workspace crates
rooibos = { path = "./crates/rooibos" }
rooibos-reactive = { path = "./crates/rooibos-reactive" }
rooibos-dom = { path = "./crates/rooibos-dom" }
rooibos-runtime = { path = "./crates/rooibos-runtime" }
rooibos-reactive-macros = { path = "./crates/rooibos-reactive-macros" }
rooibos-components = { path = "./crates/rooibos-components" }
rooibos-config = { path = "./crates/rooibos-config" }
rooibos-tester = { path = "./crates/rooibos-tester" }
rooibos-terminal = { path = "./crates/rooibos-terminal" }
rooibos-ssh = { path = "./crates/rooibos-ssh" }
rooibos-web = { path = "./crates/rooibos-web" }
rooibos-router = { path = "./crates/rooibos-router" }
rooibos-router-macros = { path = "./crates/rooibos-router-macros" }
rooibos-keybind = { path = "./crates/rooibos-keybind" }
rooibos-keybind-macros = { path = "./crates/rooibos-keybind-macros" }

# leptos
next_tuple = "0.1.0"
either_of = "0.1.6"
reactive_graph = "0.2.8"
tachys = { git = "https://github.com/aschey/leptos", rev = "0c508c7920f4e10b836a6f7bb46c106bc3fea76a" }
throw_error = "0.3.0"
reactive_stores = "0.2.5"
any_spawner = "0.3.0"

# ratatui
ratatui = { version = "0.29", default-features = false }
tui-textarea = { version = "0.7", default-features = false }
ratatui-image = "8"
throbber-widgets-tui = "0.9.0"
tui-term = "0.2.0"
ratzilla = { git = "https://github.com/orhun/ratzilla", rev = "d72116d97c5ee7868e99754233e9f106b8922cab" }
modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "d79759555060ce9d4244ba7e7de8591c15d4f9ab" }

# other TUI things
termina = "0.1.1"
vt100 = "0.15"
portable-pty = "0.9"
modalkit = { git = "https://github.com/aschey/modalkit", rev = "d79759555060ce9d4244ba7e7de8591c15d4f9ab" }
tui-theme = { git = "https://github.com/aschey/tui-theme", rev = "fb0f88613c7abb8a449c4527ee04599d9026617e" }
terminput = "0.5.9"
terminput-web-sys = "0.2.5"
terminput-termina = "0.1.2"

# proc macros
manyhow = "0.11"
proc-macro2 = "1"
quote = "1"
syn = "2"
proc-macro-crate = "3"

# misc
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87" }
educe = "0.6"
tokio = { version = "1", default-features = false }
tracing = "0.1"
image = { version = "0.25" }
tokio-util = "0.7.16"
getrandom = "0.3"
derive_more = "2"
watch-config = { git = "https://github.com/aschey/watch-config", rev = "aa1432198cf1831ab13f73112d5b02c8552304f7" }
slotmap = "1"
bitflags = "2"
futures = "0.3"
rustc-hash = "2"
paste = "1"
taffy = "0.9.1"
thiserror = "2"
textwrap = "0.16.2"
unicode-width = "0.2.0"
tachyonfx = { version = "0.19", default-features = false }
clap = "4.5.32"
shlex = "1.3.0"
clap_complete = "4.5.46"
wasm-bindgen = "0.2"
matchit = "0.8"
url = "2"
convert_case = "0.8"
futures-util = "0.3"
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "e932670ce7998022d8cf56a593f2e39c3c0362b5" }
proc-exit = "2.0.2"
console_error_panic_hook = "0.1"
signal-hook = "0.3"
async-signal = "0.2"
russh = "0.54"
tap = "1"
tokio-stream = "0.1.17"
web-sys = "0.3.77"
itertools = "0.14"
stream-cancel = "0.8"

# examples/testing
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
rand = "0.8.5"
reqwest = "0.12.15"
serde = "1.0.219"
axum = "0.8.1"
confique = { version = "0.3" }
color-eyre = "0.6.3"
insta = "1.43.0"
tui-tree-widget = "0.23.0"
wasm-bindgen-futures = "0.4.50"


[patch.crates-io]
ratatui = { git = "https://github.com/aschey/ratatui", rev = "9c095537802f3bdb7d82b10bda226540f152421e" }
