[workspace]
members = ["./crates/*", "examples", "examples/wasm", "integration-tests"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Austin Schey <aschey13@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aschey/rooibos"
homepage = "https://github.com/aschey/rooibos"

[workspace.dependencies]
# workspace crates
rooibos = { path = "./crates/rooibos" }
rooibos-reactive = { path = "./crates/rooibos-reactive" }
rooibos-dom = { path = "./crates/rooibos-dom" }
rooibos-runtime = { path = "./crates/rooibos-runtime" }
rooibos-reactive-macros = { path = "./crates/rooibos-reactive-macros" }
rooibos-components = { path = "./crates/rooibos-components" }
rooibos-config = { path = "./crates/rooibos-config" }
rooibos-tester = { path = "./crates/rooibos-tester" }
rooibos-terminal = { path = "./crates/rooibos-terminal" }
rooibos-ssh = { path = "./crates/rooibos-ssh" }
rooibos-web = { path = "./crates/rooibos-web" }
rooibos-router = { path = "./crates/rooibos-router" }
rooibos-router-macros = { path = "./crates/rooibos-router-macros" }
rooibos-keybind = { path = "./crates/rooibos-keybind" }
rooibos-keybind-macros = { path = "./crates/rooibos-keybind-macros" }
rooibos-theme = { path = "./crates/rooibos-theme" }
rooibos-theme-macros = { path = "./crates/rooibos-theme-macros" }
rooibos-util = { path = "./crates/rooibos-util" }

# leptos
next_tuple = "0.1.0"
either_of = "0.1.6"
reactive_graph = "0.2.12"
tachys = { git = "https://github.com/aschey/leptos", rev = "e81b26821082b8b8b0b07bb4d75b922a7ccea673" }
throw_error = "0.3.1"
reactive_stores = "0.3.1"
any_spawner = "0.3.0"

# ratatui
ratatui = { version = "0.30", default-features = false }
tui-textarea = { git = "https://github.com/0xferrous/tui-textarea", rev = "b6bf812d1f5edab4f311f56d405a47341e9423cf", default-features = false }
ratatui-image = { version = "10", default-features = false }
throbber-widgets-tui = "0.10.0"
tui-term = "0.3.1"
ratzilla = "0.3"
modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "740d1a85a4273279635e1f44775e5be368d9a63d" }

# other TUI things
termina = "0.1.1"
vt100 = "0.16"
portable-pty = "0.9"
modalkit = { git = "https://github.com/aschey/modalkit", rev = "740d1a85a4273279635e1f44775e5be368d9a63d" }
terminput = "0.5.9"
terminput-web-sys = "0.2.5"
terminput-termina = "0.1.5"
termprofile = "0.2.0"
anstyle-crossterm = "4"

# proc macros
manyhow = "0.11"
proc-macro2 = "1"
quote = "1"
syn = "2"
proc-macro-crate = "3"
darling = "0.23"

# misc
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87" }
educe = "0.6"
tokio = { version = "1", default-features = false }
tracing = "0.1"
image = { version = "0.25" }
tokio-util = "0.7.16"
getrandom = "0.3"
derive_more = "2"
watch-config = { git = "https://github.com/aschey/watch-config", rev = "8720d2d7c66ca542848c7b3501920d2c5aa55c87" }
slotmap = "1"
bitflags = "2"
futures = "0.3"
rustc-hash = "2"
paste = "1"
taffy = "0.9.2"
thiserror = "2"
textwrap = "0.16.2"
unicode-width = "0.2.2"
tachyonfx = { version = "0.22", default-features = false }
clap = "4.5.32"
shlex = "1.3.0"
clap_complete = "4.5.46"
wasm-bindgen = "0.2"
matchit = "0.9"
url = "2"
convert_case = "0.10"
futures-util = "0.3"
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "e932670ce7998022d8cf56a593f2e39c3c0362b5" }
proc-exit = "2.0.2"
console_error_panic_hook = "0.1"
signal-hook = "0.4"
async-signal = "0.2"
russh = "0.57"
tap = "1"
tokio-stream = "0.1.17"
web-sys = "0.3.77"
itertools = "0.14"
stream-cancel = "0.8"
anstyle = "1"
palette = "0.7.6"
regex = "1.11"
terminal-colorsaurus = "1"
base64 = "0.22"
crossterm = "0.29"
dialoguer = "0.12"
fs-err = "3"
include_dir = "0.7.4"
indexmap = "2"
open = "5"
accesskit = "0.23"
accesskit_winit = "0.31"
uuid = "1"

# examples/testing
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
rand = "0.8.5"
reqwest = "0.13.1"
serde = "1.0.219"
axum = "0.8.1"
confique = { version = "0.4" }
color-eyre = "0.6.3"
insta = "1.46.0"
tui-tree-widget = "0.24.0"
wasm-bindgen-futures = "0.4.50"
rstest = "0.26"
wasm-tracing = "2"
