[package]
name = "rooibos-examples-old"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { path = "../../ratatui" }
crossterm = "0.27"
rooibos-old = { path = "../crates/rooibos-old" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tilia = { git = "https://github.com/aschey/tilia", rev = "1bbb4151b8f16df98775dc2c4367b2da884dce47", features = [
    "ipc",
] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
rand = "0.8.5"
# ratatui-textarea = "0.3.2"
# tui-tree-widget = "0.13.0"
