[package]
name = "rooibos-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { workspace = true }
rooibos = { workspace = true, features = [
  "ssh",
  "terminal-widget",
  "input",
  "image",
  "clipboard",
  "config",
  "router",
  "spinner",
  "keybind",
  "derive-commands",
  "effects",
  "palette",
  "tester",
] }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
rand = { workspace = true }
tui-textarea = { workspace = true }
tui-tree-widget = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
clap = { workspace = true, features = ["derive"] }
schematic = { workspace = true }
futures-cancel = { workspace = true }
taffy = { workspace = true }
tokio-util = { workspace = true }
tracing-appender = { workspace = true }
shlex = { workspace = true }
color-eyre = { workspace = true }
ratatui = { workspace = true, features = ["palette"] }
terminput-crossterm = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
nightly = ["rooibos/nightly"]
termion = ["rooibos/termion"]
