[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rooibos = { workspace = true, features = [
  "ssh",
  "terminal-widget",
  "input",
  "image",
  "config",
  "router",
  "spinner",
  "keybind",
  "derive-commands",
  "effects",
  "palette",
  "tester",
] }
tokio = { workspace = true, features = ["rt", "macros"] }
insta = { workspace = true }
