[package]
name = "rooibos-component-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
manyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
itertools = { workspace = true }
proc-macro-crate = { workspace = true }
syn = { workspace = true, features = ["full"] }
