[package]
name = "rooibos-components"
version = "0.1.0"
edition = "2021"

[dependencies]
next_tuple = "0.1.0"
either_of = "0.1.0"
tui-textarea = { version = "0.6", default-features = false, optional = true }
crossterm = { version = "0.28.1", optional = true }
rooibos-dom = { path = "../rooibos-dom" }
rooibos-reactive = { path = "../rooibos-reactive" }
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
  "all",
] }
educe = "0.6"
ratatui = { version = "0.28", default-features = false }
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"
ratatui-image = { version = "2", optional = true }
image = { version = "0.25", optional = true }
throbber-widgets-tui = { version = "0.7.0", optional = true }
tokio-util = "0.7"
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
getrandom = { version = "0.2", features = ["js"], optional = true }
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tui-term = { version = "0.1.12", optional = true }
vt100 = { version = "0.15", optional = true }
portable-pty = { version = "0.8", optional = true }

[features]
crossterm = [
  "dep:crossterm",
  "tui-textarea?/crossterm",
  "rooibos-dom/crossterm",
]
termion = ["tui-textarea?/termion", "rooibos-dom/termion"]
termwiz = ["tui-textarea?/termwiz", "rooibos-dom/termwiz"]
input-search = ["tui-textarea/search"]
terminal-widget = ["tui-term", "vt100", "portable-pty"]
image = ["dep:image", "dep:ratatui-image"]
input = ["dep:tui-textarea", "rooibos-dom/input"]
spinner = ["throbber-widgets-tui", "getrandom"]
