[package]
name = "rooibos-components"
version = "0.1.0"
edition = "2024"

[dependencies]
next_tuple = { workspace = true }
either_of = { workspace = true }
tui-textarea = { workspace = true, default-features = false, optional = true }
crossterm = { workspace = true, optional = true }
rooibos-dom = { path = "../rooibos-dom" }
rooibos-reactive = { path = "../rooibos-reactive" }
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
  "all",
] }
educe = { workspace = true }
ratatui = { workspace = true, default-features = false }
tracing = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
ratatui-image = { workspace = true, optional = true }
image = { workspace = true, optional = true }
throbber-widgets-tui = { workspace = true, optional = true }
tokio-util = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"], optional = true }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
tui-theme = { workspace = true }
terminput-crossterm = { workspace = true, optional = true, features = [
  "crossterm_0_28",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tui-term = { workspace = true, optional = true }
vt100 = { workspace = true, optional = true }
portable-pty = { workspace = true, optional = true }

[features]
crossterm = ["dep:crossterm", "tui-textarea?/crossterm", "terminput-crossterm"]
termion = ["tui-textarea?/termion"]
termwiz = ["tui-textarea?/termwiz"]
input-search = ["tui-textarea/search"]
terminal-widget = ["tui-term", "vt100", "portable-pty"]
image = ["dep:image", "dep:ratatui-image"]
input = ["dep:tui-textarea"]
spinner = ["throbber-widgets-tui", "getrandom"]
