[package]
name = "rooibos-config"
version = "0.1.0"
edition = "2024"

[dependencies]
watch-config = { workspace = true }
reactive_graph = { workspace = true, features = ["tracing", "effects"] }
rooibos-runtime = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }

[features]
schematic = ["watch-config/schematic"]
confique = ["watch-config/confique"]
json = ["watch-config/json"]
toml = ["watch-config/toml"]
yaml = ["watch-config/yaml"]
pkl = ["watch-config/pkl"]
