[package]
name = "rooibos-dom"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29", features = ["unstable"] }
slotmap = "1"
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
bitflags = "2"
educe = "0.6"
futures = "0.3"
rustc-hash = "2"
terminput = "0.3"
tui-textarea = { version = "0.7", optional = true, default-features = false }
paste = "1"
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
  "all",
] }
taffy = "0.7.5"
crossterm = { version = "0.28.1", features = ["event-stream", "use-dev-tty"] }
tracing = "0.1"
thiserror = "2"
textwrap = "0.16.1"
unicode-width = "0.2.0"
tachyonfx = { path = "../../../tachyonfx", default-features = false, features = [
  "sendable",
], optional = true }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "macros", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }

[features]
crossterm = ["terminput/crossterm", "tui-textarea?/crossterm"]
termion = ["terminput/termion", "tui-textarea?/termion"]
termwiz = ["terminput/termwiz", "tui-textarea?/termwiz"]
input = ["tui-textarea"]
default = ["crossterm"]
effects = ["dep:tachyonfx"]
