[package]
name = "rooibos-dom"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { workspace = true, features = ["unstable"] }
slotmap = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
bitflags = { workspace = true }
educe = { workspace = true }
futures = { workspace = true }
rustc-hash = { workspace = true }
terminput = { workspace = true }
tui-textarea = { workspace = true, optional = true, default-features = false }
paste = { workspace = true }
wasm-compat = { workspace = true, features = ["all"] }
taffy = { workspace = true }
crossterm = { workspace = true, features = ["event-stream", "use-dev-tty"] }
tracing = { workspace = true }
thiserror = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
tachyonfx = { workspace = true, default-features = false, features = [
  "sendable",
], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, features = ["enable-interning"] }

[features]
crossterm = ["terminput/crossterm", "tui-textarea?/crossterm"]
termion = ["terminput/termion", "tui-textarea?/termion"]
termwiz = ["terminput/termwiz", "tui-textarea?/termwiz"]
input = ["tui-textarea"]
default = ["crossterm"]
effects = ["dep:tachyonfx"]
