[package]
name = "rooibos-dom"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { workspace = true, features = ["unstable"] }
slotmap = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
bitflags = { workspace = true }
educe = { workspace = true }
futures = { workspace = true }
rustc-hash = { workspace = true }
terminput = { workspace = true }
paste = { workspace = true }
wasm-compat = { workspace = true, features = ["all"] }
taffy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
tachyonfx = { workspace = true, default-features = false, features = [
  "sendable",
  "std",
], optional = true }
itertools = { workspace = true }
rooibos-theme = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
termina = { workspace = true, features = ["event-stream"] }
terminput-termina = { workspace = true }
rooibos-terminal = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, features = ["enable-interning"] }

[features]
effects = ["dep:tachyonfx"]
scrolling-regions = ["ratatui/scrolling-regions"]
