[package]
name = "rooibos-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b" }
egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b" }
egui_ratatui = { path = "../../../egui_ratatui" }
rooibos-dom = { path = "../rooibos-dom" }
rooibos-runtime = { path = "../rooibos-runtime" }
ratatui = { version = "0.28", default-features = false }
tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
tracing = "0.1"

[features]
clipboard = ["rooibos-runtime/clipboard"]
