[package]
name = "rooibos-keybind-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
manyhow = "0.11.4"
modalkit = { git = "https://github.com/aschey/modalkit", rev = "5d9da9f9b7c03bf257e19a44ab7d4450a3ece394" }
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full"] }
