[package]
name = "rooibos-keybind"
version = "0.1.0"
edition = "2021"

[dependencies]
rooibos-keybind-macros = { path = "../rooibos-keybind-macros" }
rooibos-dom = { path = "../rooibos-dom" }
rooibos-reactive = { path = "../rooibos-reactive" }
rooibos-runtime = { path = "../rooibos-runtime", optional = true }
modalkit = { git = "https://github.com/aschey/modalkit", rev = "471b8a1bb66aed66673274083c0e55c275e788b7" }
modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "471b8a1bb66aed66673274083c0e55c275e788b7" }
terminput = { git = "https://github.com/aschey/terminput", rev = "f07cb891c397c1ab092f0f1d09c085eb52c42e8d" }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["unstable"] }
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
  "all",
] }
educe = "0.6"
clap = { version = "4.5.20", features = ["derive"] }
shlex = "1.3.0"
clap_complete = { version = "4.5.33", features = ["unstable-dynamic"] }
unicode-width = "0.2.0"

[features]
runtime = ["rooibos-runtime"]
