[package]
name = "rooibos-keybind"
version = "0.1.0"
edition = "2024"

[dependencies]
rooibos-keybind-macros = { workspace = true, optional = true }
rooibos-dom = { workspace = true }
rooibos-reactive = { workspace = true }
rooibos-runtime = { workspace = true, optional = true }
modalkit = { workspace = true }
modalkit-ratatui = { workspace = true }
terminput = { workspace = true }
ratatui = { workspace = true, features = ["unstable"] }
wasm-compat = { workspace = true, features = ["all"] }
educe = { workspace = true }
clap = { workspace = true, optional = true }
shlex = { workspace = true, optional = true }
clap_complete = { workspace = true, features = [
  "unstable-dynamic",
], optional = true }
unicode-width = { workspace = true }

[features]
runtime = ["rooibos-runtime"]
derive-commands = [
  "dep:clap",
  "dep:clap_complete",
  "dep:shlex",
  "dep:rooibos-keybind-macros",
]
