[package]
name = "rooibos-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.6"
convert_case = "0.6"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
regex = "1"
rstml = "0.11"
syn = { version = "2", features = ["full"] }
once_cell = "1"
proc-macro-crate = "1"
manyhow = "0.6.0"
