[package]
name = "rooibos-reactive"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reactive_graph = { workspace = true, features = ["tracing", "effects"] }
tachys = { workspace = true, features = ["reactive_graph", "tracing"] }
throw_error = { workspace = true }
next_tuple = { workspace = true }
reactive_stores = { workspace = true }
terminput = { workspace = true }
rooibos-dom = { workspace = true }
ratatui = { workspace = true, features = ["unstable"] }
slotmap = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
bitflags = { workspace = true }
educe = { workspace = true }
futures = { workspace = true }
rustc-hash = { workspace = true }
tui-textarea = { workspace = true, optional = true, default-features = false }
paste = { workspace = true }
wasm-compat = { workspace = true, features = ["all"] }
taffy = { workspace = true }
crossterm = { workspace = true, features = ["event-stream", "use-dev-tty"] }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
any_spawner = { workspace = true, features = ["tokio", "tracing"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, features = ["enable-interning"] }
any_spawner = { workspace = true, features = ["wasm-bindgen"] }

[features]
nightly = ["reactive_graph/nightly", "tachys/nightly"]
crossterm = ["rooibos-dom/crossterm", "tui-textarea?/crossterm"]
termion = ["rooibos-dom/termion", "tui-textarea?/termion"]
termwiz = ["rooibos-dom/termwiz", "tui-textarea?/termwiz"]
input = ["tui-textarea"]
default = ["crossterm"]
effects = ["rooibos-dom/effects"]
scrolling-regions = ["rooibos-dom/scrolling-regions"]
