[package]
name = "rooibos-router"
version = "0.1.0"
edition = "2024"

[dependencies]
matchit = { workspace = true }
tachys = { workspace = true, features = ["reactive_graph", "tracing"] }
url = { workspace = true }
reactive_graph = { workspace = true, features = ["tracing", "effects"] }
rooibos-dom = { workspace = true }
rooibos-reactive = { workspace = true }
rooibos-router-macros = { workspace = true }
